Search result partial wraps internal text correctly

--- a/app/assets/stylesheets/browser.css.less
+++ b/app/assets/stylesheets/browser.css.less
@@ -421,6 +421,7 @@ section.bottom {
           float: left;
           background-repeat: no-repeat;
           background-size: 80px 80px;
+          word-break: break-all;
           h3 {
             position: absolute;
             top: 25px;
